2001-08-08 15:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * tests/gtstdtst.prg
      Submitted by "Fergus McDonald" <listsub@qvolution.com>
  	+ New test module for GTSTD terminal driver.

  * source/rtl/gtstd/gtstd.c
      Submitted by "Fergus McDonald" <listsub@qvolution.com>
    ! changed some internal char * items to BYTE * to better match
      external functions
    ! Max row/col is 24/80 for unix compatible (would be better to
      do this for all)
    ! ReadKey implementation for unix compatible OS: ch value wasn't
      been initialised and only least-significant byte being set by
      fread() - upper byte of the int value was random, leading to
      spurious ReadKey return values
    ! Fixed missing/extra outputting of newline character in SetPos
      and Scroll functions
    ! Added use of backspace char to respond to leftward cursor
      repositioning requests
    ! Added output of BEL character for tone() calls, with tracking
      of system time to limit BEL outputs to 1 per second max

    I've only tested this under GNU/linux and gcc. The ReadKey is still
    only implemented for UNIX_COMPATIBLE_OS.

    Redirection of stdin/stdout still works ok. To preserve the ability
    to accept redirected stdin, I think maeans there should never be
    remapping of any keycodes in this driver. Would be nice to have a
    way to pass in ALT-C though.

2001-08-09 02:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/macro.c
   * include/hbcomp.h
   * include/hbexprb.c
   * include/hbexprc.c
   * include/hbmacro.h
   * include/hbmsetup.h
   * include/set.ch
   * source/compiler/cmdcheck.c
   * source/compiler/genc.c
   * source/compiler/harbour.c
   * source/compiler/hbpcode.c
   * source/rdd/dblist.prg
   * source/vm/hvm.c
     - Removed support for syncing of macro setting with main module.
     - Removed support for -ks which is replaced with -kr.